-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.1, 5.10
-
None
On a Pixel C, PositionSource never turns active, using code like
PositionSource {
id: ps
updateInterval: 1000
active: true
function posToString(pos)
{
if ((pos).isValid)
return (pos).latitude.toFixed(4) + ", " + (pos).longitude.toFixed(4)
else
return "Unknown"
}
function posString() {
return posToString(ps.position.coordinate)
}
Component.onCompleted: {
console.log("PositionSource error: ", errorString, (ps.sourceError === PositionSource.NoError), (ps.active === true))
}
property string errorString : errorEnumToString(ps.sourceError)
onSourceErrorChanged: {
errorString = errorEnumToString(ps.sourceError)
console.log("PositionSource error: ", errorString, (ps.sourceError === PositionSource.NoError), (ps.active === true))
}
function errorEnumToString(enu)
{
var errString = "";
if (sourceError === PositionSource.NoError)
errString = "NoError"
else if (sourceError === PositionSource.AccessError)
errString = "AccessError"
else if (sourceError === PositionSource.ClosedError)
errString = "ClosedError"
else if (sourceError === PositionSource.UnknownSourceError)
errString = "UnknownSourceError"
else if (sourceError === PositionSource.SocketError)
errString = "SocketError"
return errString
}
}