Fix PositionSource never turning active on android

It seems that if m_positionSource gets created too late, PositionSource
never becomes active so it never starts pushing position updates.

Task-number: QTBUG-62778
Change-Id: I7b375e9f9f1fbe546dfc27fa6bf0c431df393e65
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>